[package]
name = "prototty_monolithic_storage"
description = "Simple implementation of prototty_storage::Storage, which uses an in-memomry key/value store, storing persistently in a user-provided way"
version = "0.27.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/prototty.git"
repository = "https://github.com/stevebob/prototty.git"
documentation = "https://docs.rs/prototty_monolithic_storage"

[features]
yaml = ["prototty_storage/yaml"]
toml = ["prototty_storage/toml"]


[dependencies]
prototty_storage = { path = "../storage", version = "0.27", features = ["json"] }
serde_json = "1.0"
