[package]
name = "prototty-app"
version = "0.1.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]

[dependencies]
tetris = { path = ".." }
#prototty = { git = "https://github.com/stevebob/prototty", rev = "wasm-backend" }
#prototty_elements = { git = "https://github.com/stevebob/prototty", rev = "wasm-backend" }
prototty = { path = "/home/steve/src/prototty" }
ansi_colour = "0.2"
rand = "0.4"
